API v2 updates; libs updates
